--- a/src/main/webapp/channel/channel_reports.xhtml
+++ b/src/main/webapp/channel/channel_reports.xhtml
@@ -18,9 +18,9 @@
                                     <h:panelGrid columns="1">
                                         <p:commandButton styleClass="linkButton" value="Income With Agent Bookings" action="/channel/income_with_agent_bookings" ajax="false"/>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Income By FeeType By Sessoin Date" action="/channel/channel_report_by_fee_1"/>
-                                        <p:commandButton styleClass="linkButton" value="Channel Patient Counts(34)" action="/channel/channel_report_patient_count" ajax="false"/>
-                                        <p:commandButton styleClass="linkButton" value="Channel Hospital Income" action="/channel/channel_report_patient_count_income" ajax="false"/>
-
+                                        <p:commandButton styleClass="linkButton" value="Channel Patient Counts(34)" action="/channel/channel_report_patient_count" ajax="false" actionListener="#{channelReportController.clearAll}"/>
+                                        <p:commandButton styleClass="linkButton" value="Channel Hospital Income" action="/channel/channel_report_patient_count_income" ajax="false" actionListener="#{channelReportController.clearAll}"/>
+                                        <p:commandButton styleClass="linkButton" value="Channel Hospital Income With Doc Fee" action="/channel/channel_report_patient_count_income_with_doc" ajax="false" actionListener="#{channelReportController.clearAll}"/>
                                     </h:panelGrid>
                                 </p:panel>
                             </h:panelGrid>
