--- a/src/main/webapp/admin/admin_items_index.xhtml
+++ b/src/main/webapp/admin/admin_items_index.xhtml
@@ -17,81 +17,81 @@
                     <p:panel header="Manage Items/Services" rendered="true">
                         <p:accordionPanel activeIndex="#{investigationCategoryController.manageItemIndex}" >
                             <p:tab title="Manage Investigations">
-                                <h:panelGrid columns="1" >
-                                    <p:commandButton   class="btn btn-primary w-100 my-2"  ajax="false" value="Investigations" action="/lab/investigation" />
-                                    <p:commandButton   class="btn btn-primary w-100 my-2"  ajax="false" value="Investigation Fees" action="/lab/investigation_fee" />
-                                    <p:commandButton   class="btn btn-primary w-100 my-2"  ajax="false" disabled="true" value="Add New Investigation" action="/opd_service_category" />
-                                    <p:commandButton   class="btn btn-primary w-100 my-2"  ajax="false" disabled="true" value="List Investigations" action="/opd_service_subcategory" />
-                                    <p:commandButton   class="btn btn-primary w-100 my-2"  ajax="false" value="Upload Investigations" action="#{investigationController.uploadJsonToCreateAnInvestigations()}" />
+                                <div class="d-grid gap-2">
+                                    <p:commandButton   class="w-100"  ajax="false" value="Investigations" action="/lab/investigation" />
+                                    <p:commandButton   class="w-100" ajax="false" value="Investigation Fees" action="/lab/investigation_fee" />
+                                    <p:commandButton   class="w-100"  ajax="false" disabled="true" value="Add New Investigation" action="/opd_service_category" />
+                                    <p:commandButton   class="w-100"  ajax="false" disabled="true" value="List Investigations" action="/opd_service_subcategory" />
+                                    <p:commandButton   class="w-100"  ajax="false" value="Upload Investigations" action="#{investigationController.uploadJsonToCreateAnInvestigations()}" />
        
 
-                                </h:panelGrid>
+                                </div>
                             </p:tab>
                             <p:tab title="Manage Services">
-                                <h:panelGrid columns="1" >
+                                <div class="d-grid gap-2">
 
 
-                                    <p:commandButton   class="btn btn-primary w-100 my-2"  ajax="false" value="Investigations" action="/lab/investigation" />
-                                    <p:commandButton   class="btn btn-primary w-100 my-2"  ajax="false" value="Investigation Fees" action="/lab/investigation_fee" />
-                                    <p:commandButton   class="btn btn-primary w-100 my-2"  ajax="false" value="Service Categories" action="/opd_service_category" />
-                                    <p:commandButton   class="btn btn-primary w-100 my-2"  ajax="false" value="Service Subcategories" action="/opd_service_subcategory" />
-                                    <p:commandButton   class="btn btn-primary w-100 my-2"  ajax="false" value="Service" action="/opd_service" />
-                                    <p:commandButton   class="btn btn-primary w-100 my-2"  ajax="false" value="Inward Service" action="/inward/inward_service" />
-                                    <p:commandButton   class="btn btn-primary w-100 my-2"  ajax="false" value="Theatre Service" action="/inward/theatre_service" />
-                                    <p:commandButton   class="btn btn-primary w-100 my-2"  ajax="false" value="Bill Expenses" action="/common/bill_expenses" />
+                                    <p:commandButton   class="w-100"  ajax="false" value="Investigations" action="/lab/investigation" />
+                                    <p:commandButton   class="w-100"  ajax="false" value="Investigation Fees" action="/lab/investigation_fee" />
+                                    <p:commandButton   class="w-100"  ajax="false" value="Service Categories" action="/opd_service_category" />
+                                    <p:commandButton   class="w-100"  ajax="false" value="Service Subcategories" action="/opd_service_subcategory" />
+                                    <p:commandButton   class="w-100"  ajax="false" value="Service" action="/opd_service" />
+                                    <p:commandButton   class="w-100"  ajax="false" value="Inward Service" action="/inward/inward_service" />
+                                    <p:commandButton   class="w-100"  ajax="false" value="Theatre Service" action="/inward/theatre_service" />
+                                    <p:commandButton   class="w-100"  ajax="false" value="Bill Expenses" action="/common/bill_expenses" />
 
 
-                                    <p:commandButton   class="btn btn-primary w-100 my-2"  ajax="false" value="Relationships" action="relationships" ></p:commandButton>
-                                    <p:commandButton   class="btn btn-primary w-100 my-2"  ajax="false" value="Religions" action="/common/religion" ></p:commandButton>
-                                    <p:commandButton   class="btn btn-primary w-100 my-2"  ajax="false" value="Nationalities" action="/common/nationality" ></p:commandButton>
+                                    <p:commandButton   class="w-100"  ajax="false" value="Relationships" action="relationships" ></p:commandButton>
+                                    <p:commandButton   class="w-100"  ajax="false" value="Religions" action="/common/religion" ></p:commandButton>
+                                    <p:commandButton   class="w-100"  ajax="false" value="Nationalities" action="/common/nationality" ></p:commandButton>
 
-                                    <p:commandButton   class="btn btn-primary w-100 my-2"  ajax="false" value="Bulk Delete of Services" action="opd_service_list_to_remove" />
-                                    <p:commandButton   class="btn btn-primary w-100 my-2"  ajax="false" value="Bulk Un-Delete of Services" action="/common/item_bulk_un_delete" />
+                                    <p:commandButton   class="w-100"  ajax="false" value="Bulk Delete of Services" action="opd_service_list_to_remove" />
+                                    <p:commandButton   class="w-100"  ajax="false" value="Bulk Un-Delete of Services" action="/common/item_bulk_un_delete" />
 
 
-                                </h:panelGrid>
+                                </div>
                             </p:tab>
                             <p:tab title="Reports">
-                                <h:panelGrid columns="1" >
-                                    <p:commandButton   class="btn btn-primary w-100 my-2"  ajax="false" value="Item List"
+                                <div class="d-grid gap-2">
+                                    <p:commandButton   class="w-100"  ajax="false" value="Item List"
                                                        action="#{itemController.navigateToListAllItems()}" ></p:commandButton>
-                                </h:panelGrid>
+                                </div>
                             </p:tab>
                             <p:tab title="Manage Metadata">
-                                <h:panelGrid columns="1" >
-                                    <p:commandButton   class="btn btn-primary w-100 my-2"  ajax="false" value="Relationships" action="relationships" ></p:commandButton>
-                                    <p:commandButton   class="btn btn-primary w-100 my-2"  ajax="false" value="Forms" action="/common/form_format_category" ></p:commandButton>
-                                    <p:commandButton   class="btn btn-primary w-100 my-2"  ajax="false" value="Form Format" action="/common/form_format" ></p:commandButton>
-                                    <p:commandButton   class="btn btn-primary w-100 my-2"  ajax="false" value="Categories" action="/common/metadata_super_category" ></p:commandButton>
-                                </h:panelGrid>
+                                <div class="d-grid gap-2">
+                                    <p:commandButton   class="w-100"  ajax="false" value="Relationships" action="relationships" ></p:commandButton>
+                                    <p:commandButton   class="w-100"  ajax="false" value="Forms" action="/common/form_format_category" ></p:commandButton>
+                                    <p:commandButton   class="w-100"  ajax="false" value="Form Format" action="/common/form_format" ></p:commandButton>
+                                    <p:commandButton   class="w-100"  ajax="false" value="Categories" action="/common/metadata_super_category" ></p:commandButton>
+                                </div>
                             </p:tab>
                             <p:tab title="Bulk Transactions">
-                                <h:panelGrid columns="1" >
-                                    <p:commandButton   class="btn btn-primary w-100 my-2"  ajax="false" value="Bulk Delete of Services" action="opd_service_list_to_remove" />
-                                    <p:commandButton   class="btn btn-primary w-100 my-2"  ajax="false" value="Bulk Un-Delete of Services" action="/common/item_bulk_un_delete" />
+                                <div class="d-grid gap-2">
+                                    <p:commandButton   class="w-100"  ajax="false" value="Bulk Delete of Services" action="opd_service_list_to_remove" />
+                                    <p:commandButton   class="w-100"  ajax="false" value="Bulk Un-Delete of Services" action="/common/item_bulk_un_delete" />
 
-                                    <p:commandButton   class="btn btn-primary w-100 my-2"  ajax="false" value="Bulk Delete of Investigations" action="/lab/investigation_list_to_remove" />
-                                    <p:commandButton   class="btn btn-primary w-100 my-2"  ajax="false" value="Bulk Un-Delete of Investigations" action="/common/investigation_bulk_un_delete" />
+                                    <p:commandButton   class="w-100"  ajax="false" value="Bulk Delete of Investigations" action="/lab/investigation_list_to_remove" />
+                                    <p:commandButton   class="w-100"  ajax="false" value="Bulk Un-Delete of Investigations" action="/common/investigation_bulk_un_delete" />
 
-                                </h:panelGrid>
+                                </div>
                             </p:tab>
                             <p:tab title="Setup">
-                                <h:panelGrid columns="1" >
-                                    <p:commandButton  class="btn btn-primary w-100 my-2" 
+                                <div class="d-grid gap-2">
+                                    <p:commandButton  class="w-100" 
                                                      ajax="false" 
                                                      value="Create New Items for New Institution" 
                                                      action="/dataAdmin/create_items_for_new_institution" 
                                                      />
 
 
-                                    <p:commandButton  class="btn btn-primary w-100 my-2" 
+                                    <p:commandButton  class="w-100" 
                                                      ajax="false" 
                                                      value="Create New Items by Excel Upload" 
                                                      action="/dataAdmin/create_items_for_new_institution" 
                                                      />
 
 
-                                </h:panelGrid>
+                                </div>
                             </p:tab>
                         </p:accordionPanel>
 
