--- a/src/main/webapp/inward/inward_report_bht_inward_vat.xhtml
+++ b/src/main/webapp/inward/inward_report_bht_inward_vat.xhtml
@@ -10,9 +10,9 @@
 
     <h:body>
 
-        <ui:composition template="/resources/template/template.xhtml">
+        <ui:composition template="/reportInstitution/report_own.xhtml">
 
-            <ui:define name="content">
+            <ui:define name="subcontent">
                 <h:form>
                     <p:panel header="BHT VAT Report" styleClass="alignTop" >
                         <h:panelGrid columns="2">
