--- a/src/main/webapp/inward/inward_search_balance_payment_1.xhtml
+++ b/src/main/webapp/inward/inward_search_balance_payment_1.xhtml
@@ -9,8 +9,8 @@
       >
 
     <h:body>
-        <ui:composition template="/resources/template/template.xhtml">
-            <ui:define name="content">
+        <ui:composition template="/reportInstitution/report_own.xhtml">
+            <ui:define name="subcontent">
                 <h:form>
                     <p:panel header="Search Bills" >
                         <f:facet name="header" >
